--- a/public/css/framework/template.css
+++ b/public/css/framework/template.css
@@ -70,7 +70,7 @@
     background: var(--danger);
 }
 
-body {
+.body {
     background-color: var(--background);
     color: var(--contrast);
 
@@ -88,7 +88,7 @@ body {
 }
 
 .frame {
-    background: var(--fill);
+    /* background: var(--fill); */
     transition: 0.3s;
     width: 100%;
     /* background: #ffffffaa;
